--- a/src/assets/sections/S7-buy/Buy.module.css
+++ b/src/assets/sections/S7-buy/Buy.module.css
@@ -44,6 +44,7 @@
 .price {
   margin-top: 34px;
   p {
+    margin-top: 8px;
     font-weight: 800;
     font-size: 32px;
     line-height: 141.83%;
